# fa-archiver-py3

./: .gitignore  Makefile  Pipfile  README  README.md  TODO  archiver.c  buffer.c  capture.c  decimate.config  disk.c  error.c  error.h  list.h  mask.c  parse.c  parse.h  reader.c  run_archiver  run_archiver_sr  setup.cfg  socket_server.c  transform.c  transform.h
docs/: Makefile  README  TODO  fa-archiver.rst  fa-audio.rst  fa-capture.rst  fa-prepare.rst  fa-spectrum.rst  fa-viewer.rst  fa_load.rst  fa_sniffer.rst  fa_zoomer.rst  falib.rst  index.rst  install_man
fa/audio/: audio.py
fa/conf/: BR.conf  SR.conf
fa/falib/: __init__.py  config.py  falib.py
fa/viewer/: buffer.py  (+2 more)
filters/: cic_response.m  decimate.config  fir2.m  make_filter.m  write_filter.m
iocs/: 99-archiver.rules  check_archiver  fa-ids.sr  fa-ids.ts  run_archiver  run_archiver_br  run_archiver_sr  run_archiver_ts  run_spectrum_sr
matlab/: Makefile  fa_capture.m  fa_connect.m  fa_find_server.m  fa_getids.m  fa_id2name.m  fa_load.m  fa_load2.m  fa_name2id.m  fa_zoomer.m  fa_zoomer.sh  progress_bar.m  server_names  tcp_connect.m
python/: BR.viewer.conf  Makefile  SR.viewer.conf  TEST.viewer.conf  TS.viewer.conf  analyser.edl  audio.ui  fa-audio  fa-audio.py  fa-lines  fa-spectrum  fa-viewer  fa-viewer.py  falib.py  line-analyser.py  player.py  setup.py  show-analysis  spectrum.py  start-analyser  start-spectrum  test.py
src/: Makefile  archiver.c  archiver.h  buffer.c  buffer.h  capture.c  config_file.c  config_file.h  decimate.c  decimate.h  disk.c  disk.h  disk_writer.c  disk_writer.h  error.c  error.h  gigabit.c  gigabit.h  layout  layout-list  libera-grouping.h  list.h  locking.c  locking.h  make-layout  mask.c  mask.h  matlab.c  matlab.h  parse.c  parse.h  pool.c  pool.h  prepare.c  reader.c  reader.h  replay.c  replay.h  show-layout.c  sniffer.c  (+9 more)
(+64 files in other folders)
