[metadata]
name = fa
version = file: fa/VERSION
description = Python 3 version of FA archiver.
author = Michael Abbott
author_email = Michael.Abbott@diamond.ac.uk
license = GNU V2.0
url = https://gitlab.diamond.ac.uk/controls/python3/fa-archiver

[options]
packages = fa, fa.audio, fa.conf, fa.falib, fa.viewer
include_package_data = true
install_requires =
    cothread>=2.15
    pygelf
    scipy
    numpy
    PyQt5 == 5.12.2+dls1
    PythonQwt
    guidata
    guiqwt
tests_require =
    pytest
    pytest-cov
    mock
    mypy

[options.package_data]
fa = VERSION
fa.conf = BR.conf, SR.conf, TEST.conf, TS.conf
fa.viewer = viewer.ui

[options.entry_points]
console_scripts =
    fa_viewer = fa.viewer.fa_viewer:main
    fa-audio = fa.audio.audio:main

[mypy]
# Dls libraries e.g. cothread, are not recognised properly.
ignore_missing_imports = True
